--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 .App {
-    padding: 30px;
-    display: flex;
-    background-color: aliceblue;
-    height: 100vh;
-    gap: 50px;
+  display: flex;
+  gap: 30px;
+  padding: 30px;
+  height: 100vh;
+  background-color: #a8d1e7;
 }
 
 .todolist {
-    border: 2px solid rgba(149, 169, 207, 0.89);
-    padding: 15px;
-    background-color: rgba(149, 169, 207, 0.68);
-    height: max-content;
-    border-radius: 3px;
+  display: inline-block;
+  border: 2px solid #000;
+  height: fit-content;
+  padding: 10px 20px 20px;
+  background-color: #eae8b8;
 }
+
+
