--- a/src/App.css
+++ b/src/App.css
@@ -3,116 +3,19 @@
   gap: 30px;
   padding: 30px;
   height: 100vh;
-  background: url("./images/background.jpg") no-repeat fixed center;
-  background-size: cover;
-}
-
-.container {
-  width: 1800px;
-  padding: 10px;
-  margin: 0 auto;
+  background-color: #a8d1e7;
 }
 
 .todolist {
-  width: 400px;
-  height: 400px;
-  padding: 30px;
-  background: transparent;
-  border: 2px solid #e6b7eca1;
-  border-radius: 10px;
-}
-
-.todolistTitle {
-  color: #eee;
-  text-align: center;
-  margin-bottom: 36px;
-}
-
-.inputWrapper {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 25px;
-}
-
-.inputContainer {
-  display: flex;
-  justify-content: space-between;
-}
-
-.todoInput {
-  flex: 1;
-  outline: none;
-  padding: 10px 10px 10px 20px;
-  background: transparent;
-  border: 2px solid #e6b7eca1;
-  border-radius: 30px;
-  color: #eee;
-  font-size: 16px;
-  margin-right: 10px;
-}
-
-.todoInput::placeholder {
-  color: #bfbfbf;
-}
-
-.addButton {
-  border: none;
-  outline: none;
-  background: #e6b7eca1;
-  color: #fff;
-  font-size: 35px;
-  cursor: pointer;
-  border-radius: 40px;
-  width: 40px;
-  height: 40px;
+  display: inline-block;
+  border: 2px solid #000;
+  height: fit-content;
+  padding: 10px 20px 20px;
+  background-color: #eae8b8;
 }
 
 .task {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  background-color: #463c7b;
-  border-radius: 5px;
-  margin: 10px 0;
-  padding: 10px 12px;
-  border: 2px solid #e6b7eca1;
-  transition: all 0.2s ease;
-}
-
-.task:first-child {
-  margin-top: 0;
-}
-
-.task:last-child {
-  margin-bottom: 0;
-}
-
-.task:hover {
-  background-color: #e6b7eca1;
-}
-
-.task span {
-  padding-left: 20px;
-  position: relative;
-  cursor: default;
-}
-
-.task span::before {
-  content: "";
-  height: 20px;
-  width: 20px;
-  position: absolute;
-  margin-left: -30px;
-  border-radius: 100px;
-  border: 2px solid #e6b7eca1;
-}
-
-input[type="checkbox"] {
-  visibility: hidden;
-}
-
-input:checked + span {
-  text-decoration: line-through;
+  font-weight: 600;
 }
 
 .task-done {
@@ -124,6 +27,9 @@ input:checked + span {
   background-color: #e7bf3f;
 }
 
+.input {
+  outline: none;
+}
 
 .input-error {
   border: 2px solid red;
