--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,10 @@
 }
 
 .input-error {
-  border: 2px solid red;
+  border: 2px solid #bd0000;
+}
+
+.errorMessage {
+  font-size: 12px;
+  color: #bd0000;
 }
