added func addTodolist

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 .App {
   display: flex;
+  flex-direction: column;
   gap: 30px;
   padding: 30px;
   height: 100vh;
   background-color: #a8d1e7;
+}
+
+
+.todolistsWrapper {
+  display: flex;
+  gap: 30px;
 }
 
 .todolist {
