--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,24 @@
   background-color: #a8d1e7;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 .todolistsWrapper {
   display: flex;
-  gap: 30px;
+  gap: 50px;
 }
 
 .todolist {
   display: inline-block;
   border: 2px solid #000;
   height: fit-content;
-  padding: 10px 20px 20px;
+  padding: 10px 30px 20px;
   background-color: #eae8b8;
+  width: 220px;
 }
 
 .task {
