--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,26 @@
+/*
 .App {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
   padding: 30px;
-  height: 100vh;
-  background-color: #a8d1e7;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-    list-style: none;
-}
-
-.todolistsWrapper {
   display: flex;
-  gap: 50px;
 }
 
-.todolist {
-  display: inline-block;
-  border: 2px solid #000;
-  height: fit-content;
-  padding: 10px 30px 20px;
-  background-color: #eae8b8;
-  width: 220px;
+.App > div {
+  margin-right: 50px;
 }
 
-.task {
-  font-weight: 600;
+.error {
+  border: red 1px solid;
 }
 
-.task-done {
-  text-decoration: line-through;
-  opacity: .3;
+.error-message {
+  color: red;
 }
 
-.active {
-  background-color: #e7bf3f;
+.active-filter {
+  background-color: aquamarine;
 }
 
-.input {
-  outline: none;
+.is-done {
+  opacity: 0.5;
 }
-
-.input-error {
-  border: 2px solid #bd0000;
-}
-
-.errorMessage {
-  font-size: 12px;
-  color: #bd0000;
-}
+*/
